# keld-signal

./: .gitignore  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/: secret_scanning.yml
.github/workflows/: ci.yml  installers.yml  release.yml
.superpowers/sdd/: task-9-report.md
cmd/keld/: main.go
cmd/keld-agent/: main.go
docs/: enrichment-settings.md  keld-agent-p2-onnx-decision.md  signal-client-events.md
docs/superpowers/: HANDOFF-2026-07-12.md  HANDOFF-tool-coverage.md  HANDOFF.md
installers/macos/: Info.plist  build-app.sh  build-pkg.sh  distribution.xml  onboard.command  onboard_command_test.sh
installers/resources/: EULA.txt  SECURITY-OVERVIEW.txt
installers/windows/: keld-agent.iss
internal/agent/: privacy_test.go
internal/agentcli/: agentcli.go  agentcli_test.go  enrichcmd.go  enrichcmd_test.go  evalcmd.go  metrics.go  metrics_test.go
internal/api/: client.go  client_test.go
internal/auth/: device.go  device_test.go  store.go  store_test.go
internal/cli/: hook.go  login.go  login_test.go  onboard_events.go  onboard_events_test.go  restore.go  restore_test.go  root.go  root_test.go  setup.go  status.go  (+8 more)
scripts/: cut-release.sh  enrichments-sink.py  freeze-check-local.sh  install.ps1  install.sh  scaleway-mac.py  send-test-prompt.py  signal-events-sink.py  test-install-sh.sh
sidecar/: README.md  build-freeze.sh  keld-agent-sidecar.spec  requirements.txt  serve.py  test_build_freeze.sh
tests/: conftest.py  test_cli.py  test_hook.py  test_paths.py  test_telemetry.py
(+368 files in other folders)
