[project]
name = "keld"
version = "0.1.0"
description = "Keld CLI — set up local telemetry for AI coding tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["typer>=0.12", "httpx>=0.27", "rich>=13"]

[project.scripts]
keld = "keld.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keld"]

# Keep the sdist to shippable source only — exclude internal dev artifacts
# (.superpowers/, docs/ plans, tests) that would otherwise be published.
[tool.hatch.build.targets.sdist]
include = ["src/keld", "README.md", "pyproject.toml"]

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
